Add commented out code for banner

--- a/assets/scss/layout/work.scss
+++ b/assets/scss/layout/work.scss
@@ -23,6 +23,7 @@
 }
 
 #watchr, #scout, #uwparkingbot, #findit, #gestur, #ramsay {
+  position: relative;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
