--- a/assets/stylesheets/critical.css
+++ b/assets/stylesheets/critical.css
@@ -1,251 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:900,400,700,300);
-
-html,
-body,
-div,
-span,
-p,
-a,
-i,
-ul,
-li,
-section {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ul {
-  list-style: none;
-}
-
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-}
-
-body {
-  font-family: Lato;
-  font-size: 1em;
-  font-weight: 400;
-  color: #444444;
-}
-
-.blue {
-  color: #0085CA;
-}
-
-.letter {
-  display: inline-block;
-  font-weight: 900;
-  font-size: 4em;
-  margin: 0.03em;
-  position: relative;
-  transform-style: preserve-3d;
-  perspective: 400;
-  z-index: 1;
-}
-
-.letter:before,
-.letter:after {
-  position: absolute;
-  content: attr(data-letter);
-  transform-origin: top left;
-  top: 0;
-  left: 0;
-}
-
-.letter:after {
-  color: rgba(0, 0, 0, 0.11);
-  z-index: 2;
-  transform: scale(1.08, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 1deg);
-}
-
-.letter:before {
-  text-shadow: -1px 0px 1px rgba(255, 255, 255, 0.8), 1px 0px 1px rgba(0, 0, 0, 0.8);
-  z-index: 3;
-  transform: rotateX(0deg) rotateY(-18deg) rotateZ(0deg);
-}
-
-.letter:before {
-  color: #FFF;
-}
-
-.arrow {
-  width: 30px;
-  height: 30px;
-  bottom: 45px;
-  position: absolute;
-  left: 0%;
-  right: 0%;
-  margin: -20px auto;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  border-left: none;
-  border-top: none;
-  border-right: 2px #FFF solid;
-  border-bottom: 2px #FFF solid;
-  animation-duration: 4s;
-  animation-iteration-count: infinite;
-  animation-name: arrow;
-}
-
-@keyframes arrow {
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-.mainlogo {
-  width: 100%;
-}
-
-.logopath {
-  fill: none;
-  stroke: #ffffff;
-  stroke-width: 50;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-miterlimit: 10;
-  stroke-dasharray: 21000;
-  animation: animate-logo 2s linear;
-  width: 100%;
-}
-
-@keyframes animate-logo {
-  0% {
-    stroke-dashoffset: 21000;
-  }
-
-  40% {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 21000;
-    opacity: 0.4;
-  }
-
-  60% {
-    opacity: 0.1;
-    stroke-width: 50;
-  }
-
-  85% {
-    opacity: 1;
-    stroke-width: 80;
-  }
-
-  100% {
-    stroke-width: 50;
-  }
-}
-
-.typer {
-  color: #ffffff;
-}
-
-@media all and (max-width: 600px) {
-  .typer {
-    margin-top: 20px;
-  }
-}
-
-
-
-.section-wrapper {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: row;
-}
-
-.subsection-hero {
-  min-height: 20vh;
-  flex: 1;
-  display: flex;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.subsection-hero {
-  background-color: #e1e8f0;
-  background: url("../images/hero-bg.jpg") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-.intro {
-  height: 100vh;
-  background: #e1e8f0;
-  background: url("../images/herobg.jpg") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-.intro .title div {
-  display: inline-block;
-}
-
-.intro .icons-list {
-  display: none;
-}
-
-@media all and (max-width: 600px) {
-  .section-wrapper {
-    /* On small screens, we are no longer using row direction but column */
-    flex-direction: column;
-  }
-
-  .intro .icons-list {
-    display: inline-block;
-    font-size: 1.5em;
-    padding-left: 10px;
-    margin-top: 30px;
-    color: #e1e8f0;
-  }
-
-  .intro .icons-list li {
-    display: inline;
-    list-style-type: none;
-    padding-right: 10px;
-  }
-
-  .intro .icons-list li a:link {
-    color: #e1e8f0;
-    text-decoration: none;
-  }
-
-  .intro .icons-list li a:visited {
-    color: #e1e8f0;
-    text-decoration: none;
-  }
-
-  .letter {
-    font-size: 3em;
-  }
-}
+@import url(http://fonts.googleapis.com/css?family=Lato:900,400,700,300);html,body,div,span,p,a,i,ul,li,section{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}section{display:block}body{line-height:1}ul{list-style:none}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0}body{font-family:Lato;font-size:1em;font-weight:400;color:#444444}.clear{clear:both}.blue{color:#0085CA}.letter{display:inline-block;font-weight:900;font-size:4em;margin:0.03em;position:relative;transform-style:preserve-3d;perspective:400;z-index:1}.letter:before,.letter:after{position:absolute;content:attr(data-letter);transform-origin:top left;top:0;left:0}.letter:after{color:rgba(0,0,0,0.11);z-index:2;transform:scale(1.08,1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg,1deg)}.letter:before{text-shadow:-1px 0px 1px rgba(255,255,255,0.8),1px 0px 1px rgba(0,0,0,0.8);z-index:3;transform:rotateX(0deg) rotateY(-18deg) rotateZ(0deg)}.letter:before{color:#FFF}.arrow{width:30px;height:30px;bottom:45px;position:absolute;left:0%;right:0%;margin:-20px auto;transform:rotate(45deg);-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);border-left:none;border-top:none;border-right:2px #FFF solid;border-bottom:2px #FFF solid;animation-duration:4s;animation-iteration-count:infinite;animation-name:arrow}@keyframes arrow{0%{opacity:1}50%{opacity:0}100%{opacity:1}}.mainlogo{width:100%}.logopath{fill:none;stroke:#ffffff;stroke-width:50;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:21000;animation:animate-logo 2s linear;width:100%}@keyframes animate-logo{0%{stroke-dashoffset:21000}40%{stroke-dashoffset:0;stroke-dasharray:21000;opacity:0.4}60%{opacity:0.1;stroke-width:50}85%{opacity:1;stroke-width:80}100%{stroke-width:50}}.typer{color:#ffffff}@media all and (max-width:600px){.typer{margin-top:20px}}.section-wrapper{min-height:100vh;display:flex;flex-direction:row}.subsection-hero{min-height:20vh;flex:1;display:flex;text-align:center;flex-direction:column;justify-content:center}.subsection-hero{background-color:#e1e8f0;background:url("../images/hero-bg.jpg") no-repeat center center;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}.intro{height:100vh;background:#e1e8f0;background:url("../images/herobg.jpg") no-repeat center center;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}.intro .title div{display:inline-block}.intro .icons-list{display:none}@media all and (max-width:600px){.section-wrapper{flex-direction:column}.intro .icons-list{display:inline-block;font-size:1.5em;padding-left:10px;margin-top:30px;color:#e1e8f0}.intro .icons-list li{display:inline;list-style-type:none;padding-right:10px}.intro .icons-list li a:link{color:#e1e8f0;text-decoration:none}.intro .icons-list li a:visited{color:#e1e8f0;text-decoration:none}.letter{font-size:3em}}
