--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -123,7 +123,7 @@ strong {
   overflow: hidden;
   border: 2px solid;
   border-radius: 100px;
-  background: transparent;
+  background: rgba(0, 0, 0, 0);
   color: #fff;
   -webkit-transition: color 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), border-color 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
   transition: color 0.3s cubic-bezier(0.02, 0.01, 0.47, 1), border-color 0.3s cubic-bezier(0.02, 0.01, 0.47, 1); }
